--- a/src/mx/maxitoners/vistas/MostrarInventario.form
+++ b/src/mx/maxitoners/vistas/MostrarInventario.form
@@ -3,6 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Maxitoners"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -133,7 +134,7 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tbl_productos">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="tbl_productos.setDefaultRenderer(Object.class, new DefaultTableCellRenderer(){&#xa;    @Override&#xa;    public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column){&#xa;        final Component c = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);&#xa;        &#xa;        if(!isResaltarEnabled){&#xa;            c.setBackground(Color.WHITE);&#xa;            return c;&#xa;        }&#xa;        &#xa;        if(((int)tbl_productos.getValueAt(row, 3)) &lt;= 0){&#xa;            c.setBackground(Color.PINK);&#xa;        } else {&#xa;            c.setBackground(Color.WHITE);&#xa;        }&#xa;        &#xa;        return c;&#xa;    }&#xa;});">
               <Table columnCount="5" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
